tests/transpiler/x/hs/list_index.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/list_index.hs:3:7: error:
    • No instance for (Num [a0]) arising from the literal ‘10’
    • In the expression: 10
      In the expression: [10, 20, 30]
      In an equation for ‘xs’: xs = [10, 20, 30]
  |
3 | xs = [10, 20, 30]
  |       ^^

/workspace/mochi/tests/transpiler/x/hs/list_index.hs:7:28: error:
    • Ambiguous type variable ‘a0’ arising from a use of ‘show’
      prevents the constraint ‘(Show a0)’ from being solved.
      Probable fix: use a type annotation to specify what ‘a0’ should be.
      Potentially matching instances:
        instance Show Ordering -- Defined in ‘GHC.Show’
        instance Show a => Show (Maybe a) -- Defined in ‘GHC.Show’
        ...plus 25 others
        ...plus 12 instances involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    • In the first argument of ‘map’, namely ‘show’
      In the first argument of ‘unwords’, namely ‘(map show (xs !! 1))’
      In the first argument of ‘putStrLn’, namely
        ‘(unwords (map show (xs !! 1)))’
  |
7 |     putStrLn (unwords (map show (xs !! 1)))
  |                            ^^^^
