tests/transpiler/x/hs/list_index.hs
-- Generated by Mochi transpiler v0.10.31 on 2025-07-19 21:29:06 GMT+7
import Data.List (isInfixOf, union, intersect, (\\))
xs = [10, 20, 30]

main :: IO ()
main = do
    putStrLn (unwords (map show (xs !! 1)))
